# EasyPhoto

./: .gitignore  CMakeLists.txt  QtNote.qrc  README.md  config.cmake  imagekit.qrc  logWarning.txt  qm.bat  qt6.natvis.xml  ts.bat
acore/: CMakeLists.txt  langmgr.cpp  langmgr.h  logmgr.h  stylemgr.cpp
agui/: CMakeLists.txt  agui.qrc
agui/inc/: aapplication.h  aarrowwidget.h  abasedialog.h  abasewidget.h  acanmovewidget.h  acheckedbutton.h  aenum.h  afourstateimagewidget.h  afuncpanelwidget.h  agui_global.h  aicontextwidget.h  aimportdialog.h  aimportguide.h  alistview.h  alistviewmodel.h  aloadingdialog.h  anavbarwidget.h  apreviewbutton.h  arotatingpixmapwidget.h  astylestatus.h  athumbnail.h  atooltip.h  atopbar.h
agui/res/: atopbar.qss
agui/res/style/: afuncpanelwidget.qss  aicontextwidget.qss  atopbar.qss
agui/src/: aapplication.cpp  aarrowwidget.cpp  abasedialog.cpp  abasewidget.cpp  acanmovewidget.cpp  acheckedbutton.cpp  afourstateimagewidget.cpp  afuncpanelwidget.cpp  aicontextwidget.cpp  aimportdialog.cpp  aimportguide.cpp  alistview.cpp  alistviewmodel.cpp  aloadingdialog.cpp  anavbarwidget.cpp  apreviewbutton.cpp  arotatingpixmapwidget.cpp  athumbnail.cpp  atooltip.cpp  atopbar.cpp
aml/: Test.qml
awidget/: CMakeLists.txt  apushbutton.cpp  apushbutton.h  atextedit.cpp  atextedit.h  awidget.cpp  awidget.h  awidget.qrc  awlistview.cpp  awlistview.h
cloudmusic/: CMakeLists.txt
icon/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
imagekit/: CMakeLists.txt  README.md  imagekit.qrc
imagekit/inc/: application.h  compressioncontroller.h  compressionlistdelegate.h  compressionlistview.h  compressionlistviewmodel.h  compressionmodels.h  compressionwindow.h  compressmanager.h  conversioncontroller.h  conversionlistdelegate.h  conversionlistview.h  conversionlistviewmodel.h  conversionmodels.h  conversionwindow.h  editcontroller.h  editcropview.h  editfilelistview.h  editpreviewview.h  editsettingview.h  editwindow.h  image2gifcontroller.h  image2giffilelistview.h  image2gifpreviewview.h  image2gifsettingview.h  image2gifwindow.h  imageenhancementcontroller.h  imageenhancementfilelistview.h  imageenhancementpreviewview.h  imageenhancementsettingview.h  imageenhancementwindow.h  imageerasepreviewview.h  imagefunc.h  imagefuncdelegate.h  imagefuncmodel.h  imagefuncview.h  imagekit_global.h  imagekitstartupcontroller.h  imagekitstartupview.h  imagekitstartupwindow.h  imagekitwindow.h  (+10 more)
imagekit/magick/include/: Blob.cpp  BlobRef.cpp  CoderInfo.cpp  Color.cpp  Drawable.cpp  Functions.cpp  Geometry.cpp  Options.cpp  Pixels.cpp  STL.cpp  SecurityPolicy.cpp  Thread.cpp  libMagick++.map
imagekit/magick/include/Magick++/: Image.h  Include.h
imagekit/magick/include/MagickCore/: ImageMagick.pc.in  MagickCore-config.1  accelerate-kernels-private.h  accelerate.c  annotate.c  artifact.c  attribute.c  cache-private.h  cache-view.c  cache.c  channel.c  cipher.c  coder.c  colormap.c  colorspace-private.h  colorspace.c  colorspace.h  compare.c  composite-private.h  constitute.c  delegate-private.h  display.c  distribute-cache.c  draw.c  feature.c  geometry.c  image-private.h  image-view.c  image.c  layer.c  linked-list.c  log.c  magick-config.h  magick-type.h  magick.c  memory-private.h  memory.c  method-attribute.h  mime.c  module.c  (+33 more)
imagekit/magick/include/MagickWand/: MagickWand.pc.in  animate.c  compare.c  composite.c  display.c  identify.c  import.c  magick-image.c  magick-property.h  magick-wand.c  method-attribute.h  mogrify.c  mogrify.h  pixel-iterator.c  pixel-wand.c  stream.c  studio.h  wandcli.c
imagekit/magick/include/MagickWand/tests/: add_first_lists.c  add_index.c  add_mixed.c  add_mixed_lists.c  script-token-test.c
imagekit/magick/lib/: CORE_DB_Magick++_.lib  CORE_DB_MagickCore_.exp  CORE_DB_cairo_.lib  CORE_DB_deflate_.lib  CORE_DB_ffi_.lib  CORE_DB_fftw_.exp  CORE_DB_flif_.exp  CORE_DB_freetype_.exp  CORE_DB_freetype_.lib  CORE_DB_harfbuzz_.exp  CORE_DB_heif_.exp  CORE_DB_heif_.lib  CORE_DB_jbig_.lib  CORE_DB_jpeg-turbo_.exp  CORE_DB_openjpeg_.exp  CORE_DB_openjpeg_.lib  CORE_DB_pango_.exp  CORE_DB_pango_.lib  CORE_DB_pixman_.lib  CORE_DB_png_.exp  CORE_DB_raqm_.lib  CORE_DB_raw_.lib  CORE_DB_tiff_.lib  CORE_DB_xml_.exp  CORE_DB_xml_.lib  CORE_DB_zip_.exp  CORE_DB_zip_.lib  CORE_DB_zlib_.exp  CORE_DB_zlib_.lib  FILTER_analyze_.exp  IM_MOD_DB_ashlar_.exp  IM_MOD_DB_ashlar_.lib  IM_MOD_DB_avs_.exp  IM_MOD_DB_bayer_.lib  IM_MOD_DB_bgr_.lib  IM_MOD_DB_braille_.lib  IM_MOD_DB_cals_.lib  IM_MOD_DB_cin_.lib  IM_MOD_DB_cip_.exp  IM_MOD_DB_cip_.lib  (+117 more)
imagekit/res/style/: conversionwindow.qss  editwindow.qss  imagekitstartupview.qss  startupwindow.qss
imagekit/src/: application.cpp  compressioncontroller.cpp  compressionlistdelegate.cpp  compressionlistview.cpp  compressionlistviewmodel.cpp  compressionwindow.cpp  compressmanager.cpp  conversioncontroller.cpp  conversionlistdelegate.cpp  conversionlistview.cpp  conversionlistviewmodel.cpp  conversionwindow.cpp  editcontroller.cpp  editcropview.cpp  editfilelistview.cpp  editpreviewview.cpp  editsettingview.cpp  editwindow.cpp  image2gifcontroller.cpp  image2giffilelistview.cpp  image2gifpreviewview.cpp  image2gifsettingview.cpp  image2gifwindow.cpp  imageenhancementcontroller.cpp  imageenhancementfilelistview.cpp  imageenhancementpreviewview.cpp  imageenhancementsettingview.cpp  imageenhancementwindow.cpp  imageerasecontroller.cpp  imageerasefilelistview.cpp  imageerasesettingview.cpp  imageerasewindow.cpp  imagefunc.cpp  imagefuncdelegate.cpp  imagefuncmodel.cpp  imagefuncview.cpp  imagekitstartupcontroller.cpp  imagekitstartupview.cpp  imagekitstartupwindow.cpp  imagekitwindow.cpp  (+7 more)
imagemagickwrapper/: CMakeLists.txt  MagickCore.plantuml  README.md
imagemagickwrapper/inc/: imagemagicktest.h  imagemagickwrapper_global.h
imagemagickwrapper/src/: imagemagicktest.cpp
inc/: application.h  compressioncontroller.h  compressionlistdelegate.h  compressionlistview.h  compressionlistviewmodel.h  compressionwindow.h  compressmanager.h  conversioncontroller.h  conversionlistdelegate.h  conversionwindow.h  (+69 more)
(+440 files in other folders)
